# UMass-ZC

./: CMakeLists.txt  Makefile  README.md  build.sh  config.sh
include/: NMRPulse.hh  UMAlgorithm.hh  UMBaselineCorrection.h  UMBaselineCorrection.hh  UMMath.h  UMUtility.h  UMUtility.hh  UMZeroCrossing.h  UMZeroCrossing.hh  zcInputParameters.hh
src/: NMRPulse.cc  UMAlgorithm.cc  UMBaselineCorrection.cc  UMBaselineCorrection.cpp  UMMath.cpp  UMUtility.cc  UMUtility.cpp  UMZeroCrossing.cc  UMZeroCrossing.cpp
test/: CMakeLists.txt  test.cc
test/include/: CSVManager.hh
test/src/: CSVManager.cc
